attempt layout bug fix

--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -10,22 +10,33 @@
   background-color: white;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1140px) {
   .image {
-    top: 0;
     transform: translateY(-100px);
   }
   .main {
-    top: 0;
     transform: translateY(-100px);
   }
 }
 
+@media screen and (max-width: 1139px) {
+  .image {
+    display: flex;
+    flex-grow: 1;
+  }
+}
+
+.navbar {
+  position: relative;
+  z-index: 1;
+}
+
 .image {
   position: relative;
-  width: 100%;
-  padding-bottom: 40%;
-  z-index: -10;
+  width: 100vw;
+  height: 100%;
+  /* padding-bottom: 40%; */
+  z-index: 0;
 }
 
 .badge {
